NBStudioCore/src/org/nbstudio/syntax/macParser.java
// Generated from macParser.g4 by ANTLR 4.0

    package org.nbstudio.syntax; 

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class macParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FUNCTION=36, LBRACK=34, ObjectSuper=46, FLOAT=10, ID=8, CommandRBRACK=56, 
		ASTERISK=25, LPAREN=32, AT=21, QUESTON=24, RPAREN=33, ObjectMethod=1, 
		EOL=12, SLASH=27, SpecialGlobal=7, EXCLAMATION=23, CommandCOLON=53, COMMA=14, 
		Spaces=29, EQUAL=13, CARET=39, Negative=44, PLUS=18, DOT=17, COMMENT=37, 
		ObjectClass=45, ObjectName=2, Dollar=15, RBRACK=35, GlobalName=5, SHARP=22, 
		PERCENT=20, CommandJOB=50, MACROCOMMENT=38, ObjectThis=47, CommandDO=48, 
		CommandLBRACK=55, CMD=51, UNDERSCORE=26, CommandGOTO=49, Colon=16, INT=9, 
		MINUS=19, CondOper=43, CommandSPACE=52, WS=41, RPClass=31, LPClass=30, 
		RoutineName=4, CommandEOL=54, CommandCOMMA=57, Label=3, SystemVariable=6, 
		WSNL=42, VertBar=40, STRING=11, BACKSLASH=28;
	public static final String[] tokenNames = {
		"<INVALID>", "ObjectMethod", "ObjectName", "Label", "RoutineName", "GlobalName", 
		"SystemVariable", "SpecialGlobal", "ID", "INT", "FLOAT", "STRING", "EOL", 
		"EQUAL", "COMMA", "'$'", "Colon", "'.'", "'+'", "'-'", "'%'", "'@'", "'#'", 
		"'!'", "'?'", "'*'", "'_'", "'/'", "'\\'", "Spaces", "LPClass", "RPClass", 
		"LPAREN", "RPAREN", "LBRACK", "RBRACK", "FUNCTION", "COMMENT", "MACROCOMMENT", 
		"'^'", "'|'", "WS", "WSNL", "CondOper", "'''", "'##class'", "'##super'", 
		"'##this'", "CommandDO", "CommandGOTO", "CommandJOB", "CMD", "CommandSPACE", 
		"CommandCOLON", "CommandEOL", "CommandLBRACK", "CommandRBRACK", "CommandCOMMA"
	};
	public static final int
		RULE_prog = 0, RULE_statement = 1, RULE_blockStatement = 2, RULE_comments = 3, 
		RULE_simpleStatement = 4, RULE_breakCommand = 5, RULE_breakStatement = 6, 
		RULE_catchCommand = 7, RULE_catchStatement = 8, RULE_closeCommand = 9, 
		RULE_closeStatement = 10, RULE_continueCommand = 11, RULE_doCommand = 12, 
		RULE_doStatement = 13, RULE_elseCommand1 = 14, RULE_elseCommand2 = 15, 
		RULE_elseStatement = 16, RULE_elseifCommand = 17, RULE_forCommand = 18, 
		RULE_forStatement = 19, RULE_forExpression = 20, RULE_gotoCommand = 21, 
		RULE_gotoStatement = 22, RULE_haltCommand = 23, RULE_hangCommand = 24, 
		RULE_hangStatement = 25, RULE_ifCommand = 26, RULE_ifStatement = 27, RULE_jobCommand = 28, 
		RULE_jobStatement = 29, RULE_jobArgument = 30, RULE_jobProcessParams = 31, 
		RULE_killCommand = 32, RULE_killStatement = 33, RULE_killArgument = 34, 
		RULE_lockCommand = 35, RULE_lockStatement = 36, RULE_lockArgument = 37, 
		RULE_lockArgument2 = 38, RULE_mergeCommand = 39, RULE_mergeStatement = 40, 
		RULE_mergeArgument = 41, RULE_newCommand = 42, RULE_newStatement = 43, 
		RULE_openCommand = 44, RULE_openStatement = 45, RULE_quitCommand = 46, 
		RULE_quitStatement = 47, RULE_readCommand = 48, RULE_readStatement = 49, 
		RULE_readArgument = 50, RULE_setCommand = 51, RULE_setStatement = 52, 
		RULE_setArgument = 53, RULE_tcommitCommand = 54, RULE_throwCommand = 55, 
		RULE_trollbackCommand = 56, RULE_tryCommand = 57, RULE_tryStatement = 58, 
		RULE_tstartCommand = 59, RULE_useCommand = 60, RULE_useStatement = 61, 
		RULE_viewCommand = 62, RULE_viewStatement = 63, RULE_whileCommand = 64, 
		RULE_whileStatement = 65, RULE_writeCommand = 66, RULE_writeStatement = 67, 
		RULE_writeArgument = 68, RULE_xecuteCommand = 69, RULE_xecuteStatement = 70, 
		RULE_xeceuteArgument = 71, RULE_zkillCommand = 72, RULE_zkillStatement = 73, 
		RULE_znspaceCommand = 74, RULE_ztrapCommand = 75, RULE_zwriteCommand = 76, 
		RULE_zwriteStatement = 77, RULE_zzdumpCommand = 78, RULE_zzdumpStatement = 79, 
		RULE_printCommand = 80, RULE_printStatement = 81, RULE_zbreakCommand = 82, 
		RULE_zbreakStatement = 83, RULE_zinsertCommand = 84, RULE_zloadCommand = 85, 
		RULE_zprintCommand = 86, RULE_zremoveCommand = 87, RULE_zsaveCommand = 88, 
		RULE_systemFunction = 89, RULE_variable = 90, RULE_localVariable = 91, 
		RULE_globalVariable = 92, RULE_localVariableList = 93, RULE_colonExpression = 94, 
		RULE_expression = 95, RULE_simpleExpression = 96, RULE_condition = 97, 
		RULE_pc = 98, RULE_arguments = 99, RULE_doClass = 100, RULE_doRoutine = 101, 
		RULE_doArgument = 102, RULE_labelDef = 103, RULE_labelParameter = 104;
	public static final String[] ruleNames = {
		"prog", "statement", "blockStatement", "comments", "simpleStatement", 
		"breakCommand", "breakStatement", "catchCommand", "catchStatement", "closeCommand", 
		"closeStatement", "continueCommand", "doCommand", "doStatement", "elseCommand1", 
		"elseCommand2", "elseStatement", "elseifCommand", "forCommand", "forStatement", 
		"forExpression", "gotoCommand", "gotoStatement", "haltCommand", "hangCommand", 
		"hangStatement", "ifCommand", "ifStatement", "jobCommand", "jobStatement", 
		"jobArgument", "jobProcessParams", "killCommand", "killStatement", "killArgument", 
		"lockCommand", "lockStatement", "lockArgument", "lockArgument2", "mergeCommand", 
		"mergeStatement", "mergeArgument", "newCommand", "newStatement", "openCommand", 
		"openStatement", "quitCommand", "quitStatement", "readCommand", "readStatement", 
		"readArgument", "setCommand", "setStatement", "setArgument", "tcommitCommand", 
		"throwCommand", "trollbackCommand", "tryCommand", "tryStatement", "tstartCommand", 
		"useCommand", "useStatement", "viewCommand", "viewStatement", "whileCommand", 
		"whileStatement", "writeCommand", "writeStatement", "writeArgument", "xecuteCommand", 
		"xecuteStatement", "xeceuteArgument", "zkillCommand", "zkillStatement", 
		"znspaceCommand", "ztrapCommand", "zwriteCommand", "zwriteStatement", 
		"zzdumpCommand", "zzdumpStatement", "printCommand", "printStatement", 
		"zbreakCommand", "zbreakStatement", "zinsertCommand", "zloadCommand", 
		"zprintCommand", "zremoveCommand", "zsaveCommand", "systemFunction", "variable", 
		"localVariable", "globalVariable", "localVariableList", "colonExpression", 
		"expression", "simpleExpression", "condition", "pc", "arguments", "doClass", 
		"doRoutine", "doArgument", "labelDef", "labelParameter"
	};

	@Override
	public String getGrammarFileName() { return "macParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


	int loopLevel = 0;
	boolean ifBlock = false;
	boolean elseBlock = false;
	int argsLevel = 0;
	boolean tryBlock = false;
	boolean catchBlock = false;
	boolean doBlock = false;
	boolean whileBlock = false;

	boolean cmp(String cmds){
	    String val = _input.LT(1).getText();
	    String[] vars = cmds.split(",");
	    for (String cmd : vars) {
	        if(val.equalsIgnoreCase(cmd)){
	            return true;
	        }
	    }
	    return false;
	}

	public macParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(213);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(210); statement();
					}
					} 
				}
				setState(215);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode CommandEOL() { return getToken(macParser.CommandEOL, 0); }
		public TerminalNode EOL() { return getToken(macParser.EOL, 0); }
		public LabelDefContext labelDef() {
			return getRuleContext(LabelDefContext.class,0);
		}
		public TerminalNode Label() { return getToken(macParser.Label, 0); }
		public TerminalNode Spaces() { return getToken(macParser.Spaces, 0); }
		public CommentsContext comments() {
			return getRuleContext(CommentsContext.class,0);
		}
		public SimpleStatementContext simpleStatement() {
			return getRuleContext(SimpleStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			setState(226);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(217);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(216); match(Spaces);
					}
					break;
				}
				setState(219); simpleStatement();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(220); comments();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(221);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EOL) | (1L << Spaces) | (1L << CommandEOL))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(222); match(Label);
				setState(224);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(223); labelDef();
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockStatementContext extends ParserRuleContext {
		public boolean quitWithoutArgs;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode RBRACK() { return getToken(macParser.RBRACK, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode LBRACK() { return getToken(macParser.LBRACK, 0); }
		public TerminalNode CommandRBRACK() { return getToken(macParser.CommandRBRACK, 0); }
		public TerminalNode CommandLBRACK() { return getToken(macParser.CommandLBRACK, 0); }
		public BlockStatementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public BlockStatementContext(ParserRuleContext parent, int invokingState, boolean quitWithoutArgs) {
			super(parent, invokingState);
			this.quitWithoutArgs = quitWithoutArgs;
		}
		@Override public int getRuleIndex() { return RULE_blockStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).enterBlockStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).exitBlockStatement(this);
		}
	}

	public final BlockStatementContext blockStatement(boolean quitWithoutArgs) throws RecognitionException {
		BlockStatementContext _localctx = new BlockStatementContext(_ctx, getState(), quitWithoutArgs);
		enterRule(_localctx, 4, RULE_blockStatement);

		if(quitWithoutArgs) {loopLevel++;}

		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(228);
			_la = _input.LA(1);
			if ( !(_la==LBRACK || _la==CommandLBRACK) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(232);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(229); statement();
					}
					} 
				}
				setState(234);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(235);
			_la = _input.LA(1);
			if ( !(_la==RBRACK || _la==CommandRBRACK) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}

			if(quitWithoutArgs) {loopLevel--;}

		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentsContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(macParser.COMMENT, 0); }
		public TerminalNode MACROCOMMENT() { return getToken(macParser.MACROCOMMENT, 0); }
		public CommentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).enterComments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).exitComments(this);
		}
	}

	public final CommentsContext comments() throws RecognitionException {
		CommentsContext _localctx = new CommentsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(237);
			_la = _input.LA(1);
			if ( !(_la==COMMENT || _la==MACROCOMMENT) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleStatementContext extends ParserRuleContext {
		public ZnspaceCommandContext znspaceCommand() {
			return getRuleContext(ZnspaceCommandContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ZprintCommandContext zprintCommand() {
			return getRuleContext(ZprintCommandContext.class,0);
		}
		public MergeCommandContext mergeCommand() {
			return getRuleContext(MergeCommandContext.class,0);
		}
		public ZsaveCommandContext zsaveCommand() {
			return getRuleContext(ZsaveCommandContext.class,0);
		}
		public ZzdumpStatementContext zzdumpStatement() {
			return getRuleContext(ZzdumpStatementContext.class,0);
		}
		public NewStatementContext newStatement() {
			return getRuleContext(NewStatementContext.class,0);
		}
		public SetStatementContext setStatement() {
			return getRuleContext(SetStatementContext.class,0);
		}
		public XecuteStatementContext xecuteStatement() {
			return getRuleContext(XecuteStatementContext.class,0);
		}
		public ReadStatementContext readStatement() {
			return getRuleContext(ReadStatementContext.class,0);
		}
		public ZwriteCommandContext zwriteCommand() {
			return getRuleContext(ZwriteCommandContext.class,0);
		}
		public MergeStatementContext mergeStatement() {
			return getRuleContext(MergeStatementContext.class,0);
		}
		public OpenCommandContext openCommand() {
			return getRuleContext(OpenCommandContext.class,0);
		}
		public OpenStatementContext openStatement() {
			return getRuleContext(OpenStatementContext.class,0);
		}
		public CloseStatementContext closeStatement() {
			return getRuleContext(CloseStatementContext.class,0);
		}
		public ZremoveCommandContext zremoveCommand() {
			return getRuleContext(ZremoveCommandContext.class,0);
		}
		public KillStatementContext killStatement() {
			return getRuleContext(KillStatementContext.class,0);
		}
		public ZkillStatementContext zkillStatement() {
			return getRuleContext(ZkillStatementContext.class,0);
		}
		public ZloadCommandContext zloadCommand() {
			return getRuleContext(ZloadCommandContext.class,0);
		}
		public DoCommandContext doCommand() {
			return getRuleContext(DoCommandContext.class,0);
		}
		public HangCommandContext hangCommand() {
			return getRuleContext(HangCommandContext.class,0);
		}
		public ZzdumpCommandContext zzdumpCommand() {
			return getRuleContext(ZzdumpCommandContext.class,0);
		}
		public WhileCommandContext whileCommand() {
			return getRuleContext(WhileCommandContext.class,0);
		}
		public GotoCommandContext gotoCommand() {
			return getRuleContext(GotoCommandContext.class,0);
		}
		public HangStatementContext hangStatement() {
			return getRuleContext(HangStatementContext.class,0);
		}
		public IfCommandContext ifCommand() {
			return getRuleContext(IfCommandContext.class,0);
		}
		public SetCommandContext setCommand() {
			return getRuleContext(SetCommandContext.class,0);
		}
		public HaltCommandContext haltCommand() {
			return getRuleContext(HaltCommandContext.class,0);
		}
		public ViewCommandContext viewCommand() {
			return getRuleContext(ViewCommandContext.class,0);
		}
		public BreakCommandContext breakCommand() {
			return getRuleContext(BreakCommandContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public WriteStatementContext writeStatement() {
			return getRuleContext(WriteStatementContext.class,0);
		}
		public ZwriteStatementContext zwriteStatement() {
			return getRuleContext(ZwriteStatementContext.class,0);
		}
		public ZkillCommandContext zkillCommand() {
			return getRuleContext(ZkillCommandContext.class,0);
		}
		public QuitCommandContext quitCommand() {
			return getRuleContext(QuitCommandContext.class,0);
		}
		public TryCommandContext tryCommand() {
			return getRuleContext(TryCommandContext.class,0);
		}
		public ViewStatementContext viewStatement() {
			return getRuleContext(ViewStatementContext.class,0);
		}
		public PcContext pc() {
			return getRuleContext(PcContext.class,0);
		}
		public JobCommandContext jobCommand() {
			return getRuleContext(JobCommandContext.class,0);
		}
		public ReadCommandContext readCommand() {
			return getRuleContext(ReadCommandContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public LockStatementContext lockStatement() {
			return getRuleContext(LockStatementContext.class,0);
		}
		public CatchCommandContext catchCommand() {
			return getRuleContext(CatchCommandContext.class,0);
		}
		public LockCommandContext lockCommand() {
			return getRuleContext(LockCommandContext.class,0);
		}
		public ForCommandContext forCommand() {
			return getRuleContext(ForCommandContext.class,0);
		}
		public TrollbackCommandContext trollbackCommand() {
			return getRuleContext(TrollbackCommandContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public ElseCommand1Context elseCommand1() {
			return getRuleContext(ElseCommand1Context.class,0);
		}
		public ElseStatementContext elseStatement() {
			return getRuleContext(ElseStatementContext.class,0);
		}
		public KillCommandContext killCommand() {
			return getRuleContext(KillCommandContext.class,0);
		}
		public TcommitCommandContext tcommitCommand() {
			return getRuleContext(TcommitCommandContext.class,0);
		}
		public ZinsertCommandContext zinsertCommand() {
			return getRuleContext(ZinsertCommandContext.class,0);
		}
		public TryStatementContext tryStatement() {
			return getRuleContext(TryStatementContext.class,0);
		}
		public XecuteCommandContext xecuteCommand() {
			return getRuleContext(XecuteCommandContext.class,0);
		}
		public TerminalNode CommandSPACE() { return getToken(macParser.CommandSPACE, 0); }
		public ZbreakCommandContext zbreakCommand() {
			return getRuleContext(ZbreakCommandContext.class,0);
		}
		public DoStatementContext doStatement() {
			return getRuleContext(DoStatementContext.class,0);
		}
		public NewCommandContext newCommand() {
			return getRuleContext(NewCommandContext.class,0);
		}
		public CloseCommandContext closeCommand() {
			return getRuleContext(CloseCommandContext.class,0);
		}
		public WriteCommandContext writeCommand() {
			return getRuleContext(WriteCommandContext.class,0);
		}
		public CatchStatementContext catchStatement() {
			return getRuleContext(CatchStatementContext.class,0);
		}
		public ContinueCommandContext continueCommand() {
			return getRuleContext(ContinueCommandContext.class,0);
		}
		public IfStatementContext ifStatement() {
